@@ -1,6 +1,8 @@
 Revision history for HTTP-Daemon
 
 {{$NEXT}}
+  - Handle undef and empty LocalAddr value in new() constructor as an
+    unspecified address (GH#24, RT#123069)
 
 6.05      2019-07-26 20:41:05Z
   - Added the .perltidyrc from the libwww-perl distribution
